--- a/book.html
+++ b/book.html
@@ -20,9 +20,93 @@ class=" img-fluid img-thumbnail">
         <a href="about.html"><i class="fa fa-fw fa-user"></i> About Us</a>
         <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
       </div>
-
-     
-    <!-- JQUERY -->
+<!-- carousel -->
+<section>
+<div class="container" style="height: 300px!important;">
+  <div class="carousel">
+    <div class="carousel__face"><span>Our fleet</span></div>
+    <div class="carousel__face"><span>Child friendly</span></div>
+    <div class="carousel__face"><span>Special is the key</span></div>
+    <div class="carousel__face"><span>For you</span></div>
+    <div class="carousel__face"><span>Customer satisfaction</span></div>
+    <div class="carousel__face"><span>Disability friendly</span></div>
+    <div class="carousel__face"><span>Comfort</span></div>
+    <div class="carousel__face"><span>Best drivers</span></div>
+    <div class="carousel__face"><span>Woow</span></div>
+  </div>
+</div>
+</section>
+     <!-- services -->
+     <section style="position: relative;margin-bottom: 100px; margin-left:180px;">
+     <div class="row">
+       <div class="col-md-3">
+         <img src="images/vip.png" alt="VIP" width="105px" height="105px">
+         <h1>Vip treatment</h1>
+       </div>
+       <div class="col-md-3">
+        <img src="images/1280px-WiFi_Logo.svg.png" alt="wifi" width="105x" height="105px">
+        <h1>Free wifi available</h1>
+       </div>
+       <div class="col-md-3">
+        <img src="images/seats.png" alt="seats" width="105px" height="105px">
+        <h1>Extra Leg Room</h1>
+       </div>
+       <div class="col-md-3">
+        <img src="images/power.png" alt="power" width="105px" height="105px">
+        <h1>USB power Outlets</h1>
+       </div>
+     </div>
+    </section>
+    <!-- advantages -->
+    <section style="margin-left: 180px;">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="row">
+          <div class="col-md-6">
+<img src="images/save.png" alt="save" width="126px" height="126px">
+          </div>
+          <div class="col-md-6">
+            <h3>Save</h3>
+            <p>Pay less when using our new Mobile App. You can save upto 25% of your Promo Cash
+               balance in a single booking</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="images/credits.png" alt="credits" width="80px" height="80px">
+            </div>
+            <div class="col-md-6">
+              <h3>Earn Credits</h3>
+             <p> Receive more credit during promotional periods which will be added into your Promo Cash account</p>
+              </div>
+        </div>
+      </div>
+    </div>
+    </section>
+    <!--routes  -->
+    <section style="margin-left: 180px;">
+  <div class="row">
+    <div class="col-md-3">
+     <h4>From Nairobi</h4>
+     <ul type="none">
+    <li> <a href="nrb.html">Nairobi-Nakuru</a></li>
+<li ><a href="nrb.html">Nairobi-Mombasa</a></li>
+     </ul>
+    </div>
+    <div class="col-md-3">
+<h4>From Nakuru</h4>
+    </div>
+    <div class="col-md-3">
+<h4>From Mombasa</h4>
+    </div>
+    <div class="col-md-3">
+     <h4> From Marsabit</h4>
+    </div>
+  </div>
+  </section>
+          <!-- JQUERY -->
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <!-- popper js -->
     <script src="assets/js/popper.min.js"></script>
