--- a/home.html
+++ b/home.html
@@ -14,12 +14,16 @@
 </head>
 <body style="background-image:url(images/color.PNG);background-size:cover;background-repeat: no-repeat;">
     <nav class="navbar navbar-expand-lg navbar-light">
-        
-    </nav>
-<div class="centered" >
-<img src="images/logo.png" alt="logo" class="img-fluid img-thumbnail">
-</div>
-
+        <div class="container-fluid">
+            <button type="button" id="sidebarCollapse" class="btn btn-primary">
+                <i class="fa fa-bars"></i>
+                <span class="sr-only">Toggle menu</span>
+            </button>
+            <button  class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+             aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fa fa-bars"></i>
+                 </button>
+            
  <!-- JQUERY -->
  <script src="assets/js/jquery-3.6.0.min.js"></script>
  <!-- popper js -->
