--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body style="background-image:url(images/color.PNG);background-size:cover;background-repeat: no-repeat;" 
 class=" img-fluid img-thumbnail">
   <div class="sidebar">
-        <a href="home.html"><i class="fa fa-fw fa-home"></i> Home</a>
-        <a  class="active text-light" href="book.html"><i class="fa fa-fw fa-wrench"></i> Booking</a>
+       
+        <a  class="active text-light" href="index.html"><i class="fa fa-fw fa-wrench"></i> Home</a>
         <a href="about.html"><i class="fa fa-fw fa-user"></i> About Us</a>
         <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
       </div>
